seporate objects into layers and add mappers